--- a/app/views/includes/head.inc.twig
+++ b/app/views/includes/head.inc.twig
@@ -4,16 +4,19 @@
     <!-- allow web-publisher to control how page handle cache-->
     <meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <title>{{ constant('SITENAME') }} </title>
+
+    <link href="{{ constant('URLROOT') }}/public/bootstrap-5.1.2-dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- bootstrap css link to web
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        -->
     <!-- link to icons at fontawesome-->
     <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/all.min.css">
     <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/fontawesome.min.css">
     <!-- according to tutorial https://www.youtube.com/watch?v=hc3crz0E2wk -->
 
-    <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/style.css">
+    <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/style.css?version=1.1">
 
     <!-- WYSIWYG tiny cloud-->
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -24,4 +27,8 @@
     </script>
     <script src="{{ constant('URLROOT') }}/public/javascript/jquery-3.6.0.js"></script>
     <script src="{{ constant('URLROOT') }}/public/javascript/javascript.js"></script>
+    <script src="{{ constant('URLROOT') }}/public/bootstrap-5.1.2-dist/js/bootstrap.bundle.js" ></script>
+    <!-- bootstrap js link to web
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   -->
 </head>
