--- a/app/views/includes/permissions.inc.twig
+++ b/app/views/includes/permissions.inc.twig
@@ -1,34 +1,42 @@
 {% macro canUpdateDeletePost(post)  %}
 
-    {% if session.user is not empty and (session.user.id == post.user_id or session.user.role == 'superadmin') %}
-        <a class="orange btn myBtn fa-pull-right ms-3"
-           href="{{ constant('URLROOT')}}/posts/update/{{ post.id}}">
-            Upravit článek
-        </a>
-        <form action="{{ constant('URLROOT')}}/posts/delete/{{ post.id}}" method="POST" class="delete-form">
-            <button class="myBtn btn btn-danger fa-pull-right" name="submit" type="submit">Smazat článek</button>
-        </form>
-
-        <form class="w-25 fa-pull-right"action="{{ constant('URLROOT')}}/posts/changePostFile/{{ post.id}}" method="post" enctype="multipart/form-data">
-            <div class="form-group mb-4 form-item">
-                <label>Změnit pdf soubor</label>
-                <input class="form-control" type="file" accept="application/pdf" name="fileToUpload" placeholder="PDF soubor *">
-
-                <span class="invalidFeedBack">
-                    {{ fileError }}
-                </span>
-
+    <div class="container mb-4">
+        <div class="row">
+            {% if session.user is not empty and (session.user.id == post.user_id or session.user.role == 'superadmin') %}
+            <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+                <a class="orange btn myBtn"
+                   href="{{ constant('URLROOT')}}/posts/update/{{ post.id}}">
+                    Upravit článek
+                </a>
             </div>
-            <button class="myBtn btn btn-primary green" name="submit" type="submit">Změnit pdf soubor</button>
-        </form>
-
-    {% endif %}
-
+            <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+                <form action="{{ constant('URLROOT')}}/posts/delete/{{ post.id}}" method="POST" class="delete-form">
+                    <button class="myBtn btn btn-danger" name="submit" type="submit">Smazat článek</button>
+                </form>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-6">
+                <form onsubmit="return confirm('Určitě chcete změnit soubor?');" action="{{ constant('URLROOT')}}/posts/changePostFile/{{ post.id}}" method="post" enctype="multipart/form-data">
+                    <div class="form-group row">
+                        <span class="col-sm-12 col-lg-6 mb-2">
+                            <input class="form-control" type="file" accept="application/pdf" name="fileToUpload">
+                        </span>
+                        <span class="col-sm-12 col-lg-6 mb-2">
+                            <button class="myBtn btn btn-primary green" name="submit" type="submit">Změnit pdf soubor</button>
+                        </span>
+                    </div>
+                    <span class="invalidFeedBack">
+                            {{ fileError }}
+                    </span>
+                </form>
+            </div>
+            {% endif %}
+        </div>
+    </div>
 {% endmacro %}
 
 {% macro canCreatePost() %}
     {% if session.user is not empty and (session.user.role == 'editor' or session.user.role == 'superadmin')%}
-        <a class="myBtn btn green" href="{{constant('URLROOT')}}/posts/create">Create</a>
+        <a class="myBtn btn green mb-3" href="{{constant('URLROOT')}}/posts/create">Create</a>
     {% endif %}
 {% endmacro %}
 
@@ -70,4 +78,8 @@
                     <button class="myBtn btn btn-danger" name="submit" type="submit">Smazat</button>
                 </form>
         {% endif%}
+{% endmacro %}
+
+{% macro testTlacitka() %}
+    <button onclick="confirmAction()">testButtonVPermissions</button>
 {% endmacro %}
