--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,18 @@
+*{
+    overflow-wrap: break-word;
+}
 html, body{
     height: 100%;
+    /*
     width:100%;
     padding:0;
+    */
     margin:0;
     font-family: 'Lato', sans-serif;
     display:flex;
     flex-direction:column;
     font-size:1.2em;
     position: relative;
-    min-height: 100%;
 
     scroll-behavior: smooth;
 }
@@ -17,6 +21,9 @@ body{
     background:  linear-gradient(45deg, rgb(130, 183, 220), silver);
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+h2{
+    overflow-wrap: break-word;
 }
 
 /** forms */
@@ -124,12 +131,13 @@ body{
 }
 /*  footer */
 .mainSiteContent{
-    min-height: calc(100vh - 3em - 3em); <!-- 3em is height of the footer, 3em approximate height of navbar
-                                        (cannot be specified exactly - cause of hamburger situation) -->
+   /* min-height: calc(100vh - 3em - 3em); /* 3em is height of the footer, 3em approximate height of navbar
+                                           (cannot be specified exactly - cause of hamburger situation)*/
+    min-height: 22em;
 }
 
 .divFooter{
-    height:3em;
+    /*height:3em; */
     width:100%;
     margin-top:0.5em;
 }
