Reviews - stars, protection
- change reviewer_id on user_id because of consistency
- change for of users in pages/index
- change review create and update forms - now use star system
- in posts reviews stars are now showing in reviews table in posts/show
- when creating a new post, it is checked if user has already reviewed the article before - if yes, the old review is destroyed and new one is created
- modification of user index page (view)

--- a/app/views/includes/permissions.inc.twig
+++ b/app/views/includes/permissions.inc.twig
@@ -52,14 +52,14 @@
 
 {# macro find out if session user can update selected review#}
 {% macro canUpdateReview(review) %}
-    {% if session.user is not empty and (session.user.id == review.reviewer_id or session.user.role == 'superadmin') %}
+    {% if (session.user is not empty) and ( session.user.id == review.user_id or session.user.role == 'superadmin') %}
         <a class="orange btn myBtn" href="{{ constant('URLROOT')}}/reviews/update/{{ review.id }}">Upravit</a>
     {% endif %}
 {% endmacro %}
 
 {# macro find out if session user can delete selected review#}
 {% macro canDeleteReview(review) %}
-    {% if session.user is not empty and (session.user.id == review.reviewer_id or session.user.role == 'superadmin') %}
+    {% if session.user is not empty and (session.user.id == review.user_id or session.user.role == 'superadmin') %}
             <form action="{{ constant('URLROOT')}}/reviews/delete/{{ review.id}}" method="POST" class="delete-form">
                 <button class="myBtn btn btn-danger" name="submit" type="submit" onclick="confirmAction()">Smazat</button>
             </form>
