--- a/app/views/users/index.html.twig
+++ b/app/views/users/index.html.twig
@@ -1,5 +1,6 @@
 {% extends('default.html.twig') %}
 
+{% import 'includes/permissions.inc.twig' as macros %}
 {% block content %}
     <div class="container pt-3">
         <h1>Profil uživatele</h1>
@@ -36,6 +37,8 @@
             <button class="myBtn btn btn-primary" id="registerButton" type="submit" value="submit">Změnit údaje</button>
         </form>
 
+        {% if userPosts is not empty %}
+        <h3 class="mt-3">Příspěvky</h3>
         <div class="table-responsive">
             <table class="table table-striped">
             <thead>
@@ -47,8 +50,9 @@
             {% for post in userPosts %}
                 <tbody>
                 <td><a href="{{ constant('URLROOT') }}/posts/show/{{ post.id }}">{{ post.title }}</a></td>
-                <td>{{ post.description }}</td>
+                <td class="tableCellLongText">{{ post.description }}</td>
                 {% if session.user is not empty and session.user.id == post.user_id %}
+                    <!--
                     <td>
                         <a class="myBtn btn orange ms-3 float-end"
                            href="{{ constant('URLROOT')}}/posts/update/{{ post.id}}">
@@ -60,15 +64,22 @@
                             <button class="myBtn btn btn-danger float-end ms-2" name="submit" type="submit">Smazat</button>
                         </form>
                     </td>
+                    -->
+                    <td>
+                        {{ macros.canUpdateDeletePost(post)}}
+                    </td>
                 {% endif %}
             {% endfor %}
                 </tbody>
             </table>
         </div>
-
+        {% endif %}
         <!-- reviews -->
+
+        {% if userReviews is not empty %}
+        <h3 class="mt-3">Recenze</h3>
         <div class="reviews table-responsive">
-            <table class="table-striped">
+            <table class="table table-striped">
                 <thead>
                 <tr>
                     <th scope="col">Nadpis článku</th>
@@ -81,11 +92,17 @@
                 <tbody>
                 {% for review in userReviews %}
                     <tr>
-                        <td>{{ review.post.title }}</td>
-                        <td>{{ review.topicRelevance }}</td>
-                        <td>{{ review.langQuality }}</td>
-                        <td>{{ review.originality }}</td>
-                        <td>{{ review.notes  | raw }}</td>
+                        <td><a href="{{ constant('URLROOT') }}/posts/show/{{ review.post.id }}">{{ review.post.title }}</a></td>
+                        <td>{% for i in 1..review.topicRelevance %}
+                                <i class="star fas fa-star"></i>
+                            {% endfor %}</td>
+                        <td>{% for i in 1..review.langQuality %}
+                                <i class="star fas fa-star"></i>
+                            {% endfor %}</td>
+                        <td>{% for i in 1..review.originality %}
+                                <i class="star fas fa-star"></i>
+                            {% endfor %}</td>
+                        <td class="tableCellLongText">{{ review.notes  | raw }}</td>
                         {% if session.user is not empty  %}
                             <td>
                                 {{ macros.canUpdateReview(review) }}
@@ -99,6 +116,6 @@
                 </tbody>
             </table>
         </div>
-
+        {% endif %}
     </div>
 {% endblock %}
